--- a/package.json
+++ b/package.json
@@ -36,46 +36,46 @@
   },
   "homepage": "https://github.com/Half-Shot/matrix-appservice-discord#readme",
   "dependencies": {
-    "better-discord.js": "git://github.com/Sorunome/better-discord.js.git#b5a28499899fe2d9e6aa1aa3b3c5d693ae672117",
-    "better-sqlite3": "^7.1.0",
-    "command-line-args": "^5.1.1",
-    "command-line-usage": "^6.1.0",
+    "discord.js": "github:discordjs/discord.js",
+    "better-sqlite3": "^7.4.3",
+    "command-line-args": "^5.2.0",
+    "command-line-usage": "^6.1.1",
     "escape-html": "^1.0.3",
-    "escape-string-regexp": "^4.0.0",
-    "js-yaml": "^3.14.0",
-    "marked": "^1.2.2",
-    "matrix-appservice-bridge": "^3.1.0",
-    "matrix-discord-parser": "0.1.5",
-    "mime": "^2.4.6",
-    "node-html-parser": "^1.2.19",
-    "p-queue": "^6.4.0",
-    "pg-promise": "^10.5.6",
-    "prom-client": "^12.0.0",
-    "uuid": "^8.3.1",
-    "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^4.5.0"
+    "escape-string-regexp": "^5.0.0",
+    "js-yaml": "^4.1.0",
+    "marked": "^2.1.3",
+    "matrix-bot-sdk": "0.5.19",
+    "matrix-discord-parser": "0.1.8",
+    "mime": "^2.5.2",
+    "node-html-parser": "^4.1.2",
+    "p-queue": "^7.1.0",
+    "pg-promise": "^10.11.0",
+    "prom-client": "^13.1.0",
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/better-sqlite3": "^5.4.1",
-    "@types/chai": "^4.2.11",
-    "@types/command-line-args": "^5.0.0",
-    "@types/express": "^4.17.9",
-    "@types/js-yaml": "^3.12.4",
-    "@types/marked": "^1.1.0",
-    "@types/mime": "^2.0.2",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^12",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.4.0",
-    "mocha": "^8.0.1",
+    "@types/better-sqlite3": "^5.4.3",
+    "@types/chai": "^4.2.21",
+    "@types/command-line-args": "^5.0.1",
+    "@types/express": "^4.17.13",
+    "@types/js-yaml": "^4.0.2",
+    "@types/marked": "^2.0.4",
+    "@types/mime": "^2.0.3",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.32.0",
+    "mocha": "^9.0.3",
     "nyc": "^15.1.0",
-    "proxyquire": "^1.7.11",
+    "proxyquire": "^2.1.3",
     "source-map-support": "^0.5.19",
-    "ts-node": "^8.10.2",
-    "typescript": "^4.2.3",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5",
     "why-is-node-running": "^2.2.0"
   }
 }
