--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
   },
   "homepage": "https://github.com/Half-Shot/matrix-appservice-discord#readme",
   "dependencies": {
-    "discord.js": "github:discordjs/discord.js",
     "better-sqlite3": "^7.4.3",
     "command-line-args": "^5.2.0",
     "command-line-usage": "^6.1.1",
+    "discord.js": "^13.6.0",
     "escape-html": "^1.0.3",
     "escape-string-regexp": "^5.0.0",
     "js-yaml": "^4.1.0",
     "marked": "^2.1.3",
-    "matrix-bot-sdk": "0.5.19",
+    "matrix-appservice-bridge": "^3.1.0",
     "matrix-discord-parser": "0.1.8",
     "mime": "^2.5.2",
     "node-html-parser": "^4.1.2",
